separate vimrc and add bashrc, gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ common/xmonad/*
 !common/xmonad/xmonad.xmonad.hs
 common/.gitignore
 common/vim/*
-!common/vim/vimrc
+!common/vim/gvimrc
+!common/vim/vimrc*
 core/conf/paths/_repo
 core/conf/inuse.list
 core/plugins/*
