--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
 backup/
 common/zsh.d/.zcompdump
-common/xmonad/Configs/Private.hs
 common/xmonad/*
-!common/xmonad/xfce4.xmonad.hs
-!common/xmonad/xmonad.xmonad.hs
+!common/xmonad/xmonad.hs
+common/xmonad/Gfxt/*
+!common/xmonad/Gfxt
+!common/xmonad/Gfxt/Aliases.hs
+!common/xmonad/Gfxt/Bindings.hs
+!common/xmonad/Gfxt/Email.sample.hs
+!common/xmonad/Gfxt/Help.hs
+!common/xmonad/Gfxt/Hooks.hs
+!common/xmonad/Gfxt/Workspace.hs
 common/.gitignore
 common/vim/*
 !common/vim/gvimrc
