--- a/common/tmux.conf
+++ b/common/tmux.conf
@@ -27,5 +27,7 @@ setw -g xterm-keys on
 setw -g utf8 on
 set-option -g status-utf8 on
 
+bind - split-window -v -p 20 -d 'node /home/saneyan/Practice/index.js'
+
 # Powerline
 if "dmgr has 'powerline'" "source '${HOME}/.dmgr/plugins/powerline/powerline/bindings/tmux/powerline.conf'"
