--- a/common/tmux.conf
+++ b/common/tmux.conf
@@ -30,4 +30,4 @@ set-option -g status-utf8 on
 bind - split-window -v -p 20 -d 'node /home/saneyan/Practice/index.js'
 
 # Powerline
-if "dmgr has 'powerline'" "source '${HOME}/.dmgr/plugins/powerline/powerline/bindings/tmux/powerline.conf'"
+if "dmgr has powerline-tmux" "source '${HOME}/.dmgr/plugins/powerline/powerline/bindings/tmux/powerline.conf'"
