--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,16 @@
 backup/
 common/zsh.d/.zcompdump
 common/xmonad/*
-!common/xmonad/xmonad.hs
+!common/xmonad/*.hs
 common/xmonad/Gfxt/*
-!common/xmonad/Gfxt
-!common/xmonad/Gfxt/Aliases.hs
-!common/xmonad/Gfxt/Bindings.hs
-!common/xmonad/Gfxt/Email.sample.hs
-!common/xmonad/Gfxt/Help.hs
-!common/xmonad/Gfxt/Hooks.hs
-!common/xmonad/Gfxt/Workspace.hs
+!common/xmonad/Gfxt/*.hs
 common/.gitignore
 common/vim/*
 !common/vim/gvimrc
 !common/vim/nvimrc
 !common/vim/vimrc*
+common/emacs.d/*
+!common/emacs.d/init.el
 core/conf/paths/_repo
 core/conf/inuse.list
 core/conf/plugin.list
